--- a/index.ipynb
+++ b/index.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "0             141          Freyre           Diego "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "[110 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "[110 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "14            1702    Martin     Gerard          Paris           4"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,11 +686,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>employeeNumber</th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>lastName</th>\n",
+       "      <th>numberOfCustomers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1165</td>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Jennings</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1166</td>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Thompson</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1188</td>\n",
+       "      <td>Julie</td>\n",
+       "      <td>Firrelli</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1216</td>\n",
+       "      <td>Steve</td>\n",
+       "      <td>Patterson</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1286</td>\n",
+       "      <td>Foon Yue</td>\n",
+       "      <td>Tseng</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1323</td>\n",
+       "      <td>George</td>\n",
+       "      <td>Vanauf</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1337</td>\n",
+       "      <td>Loui</td>\n",
+       "      <td>Bondur</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1370</td>\n",
+       "      <td>Gerard</td>\n",
+       "      <td>Hernandez</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1401</td>\n",
+       "      <td>Pamela</td>\n",
+       "      <td>Castillo</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1501</td>\n",
+       "      <td>Larry</td>\n",
+       "      <td>Bott</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1504</td>\n",
+       "      <td>Barry</td>\n",
+       "      <td>Jones</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1611</td>\n",
+       "      <td>Andy</td>\n",
+       "      <td>Fixter</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1612</td>\n",
+       "      <td>Peter</td>\n",
+       "      <td>Marsh</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1621</td>\n",
+       "      <td>Mami</td>\n",
+       "      <td>Nishi</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1702</td>\n",
+       "      <td>Martin</td>\n",
+       "      <td>Gerard</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    employeeNumber firstName   lastName  numberOfCustomers\n",
+       "0             1165    Leslie   Jennings                  6\n",
+       "1             1166    Leslie   Thompson                  6\n",
+       "2             1188     Julie   Firrelli                  6\n",
+       "3             1216     Steve  Patterson                  6\n",
+       "4             1286  Foon Yue      Tseng                  7\n",
+       "5             1323    George     Vanauf                  8\n",
+       "6             1337      Loui     Bondur                  6\n",
+       "7             1370    Gerard  Hernandez                  7\n",
+       "8             1401    Pamela   Castillo                 10\n",
+       "9             1501     Larry       Bott                  8\n",
+       "10            1504     Barry      Jones                  9\n",
+       "11            1611      Andy     Fixter                  5\n",
+       "12            1612     Peter      Marsh                  5\n",
+       "13            1621      Mami      Nishi                  5\n",
+       "14            1702    Martin     Gerard                  6"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "q = \"\"\"\n",
+    "SELECT \n",
+    "    e.employeeNumber, \n",
+    "    e.firstName, \n",
+    "    e.lastName, \n",
+    "    (SELECT COUNT(*) \n",
+    "     FROM customers c \n",
+    "     WHERE c.salesRepEmployeeNumber = e.employeeNumber) AS numberOfCustomers\n",
+    "FROM \n",
+    "    employees e\n",
+    "WHERE \n",
+    "    (SELECT AVG(c.creditLimit) \n",
+    "     FROM customers c \n",
+    "     WHERE c.salesRepEmployeeNumber = e.employeeNumber) > 15000\n",
+    ";\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "pd.read_sql(q, conn)"
    ]
   },
   {
